--- a/src/input.css
+++ b/src/input.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 .navbar-fixed {
   @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 .icon-sosmed {
-  @apply w-9 h-9 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white mx-1;
+  @apply w-7 h-7 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white mx-1 mt-10;
 }
 .icon-sosmed-footer {
   @apply w-9 h-9 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:text-primary text-slate-300 mx-1;
