--- a/src/input.css
+++ b/src/input.css
@@ -6,17 +6,17 @@ body {
   font-family: "Nunito Sans", sans-serif;
 }
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm;
+  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 .icon-sosmed {
-  @apply w-7 h-7 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white mx-1 mt-10;
+  @apply mx-1 mt-10 flex h-7 w-7 items-center justify-center rounded-full border border-slate-300 hover:border-primary hover:bg-primary hover:text-white;
 }
 .icon-sosmed-footer {
-  @apply w-9 h-9 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:text-primary text-slate-300 mx-1;
+  @apply mx-1 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:text-primary;
 }
 .hamburger {
-  @apply w-[30px] h-[2px] my-2 block bg-dark;
+  @apply my-2 block h-[2px] w-[30px] bg-dark dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
@@ -29,4 +29,8 @@ body {
 
 .hamburger-active > span:nth-child(3) {
   @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-3;
 }
